# porosity_reconstruction

./: .gitignore  README.md  pyproject.toml
models/: cnn.py  vae.py
notebooks/: 00_exploration.ipynb  01_vae_training.ipynb  sandbox.ipynb
utils/: data_processing.py  poreDataset.py  visualisation.py
