[tool.poetry]
name = "porosity-reconstruction"
version = "0.1.0"
description = ""
authors = ["Krauth"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.3"
scipy = "^1.15.2"
matplotlib = "^3.10.1"
ipykernel = "^6.29.5"
seaborn = "^0.13.2"
torch = "^2.6.0"
lightning = "^2.5.0.post0"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
